# os-transformer

./: README.md  pyproject.toml
transformer/: dataset.py  hyperparameters.py  main.py  utils.py
transformer/models/: block.py  feedforward.py  gptlenguage.py  head.py
