[tool.poetry]
name = "transformer"
version = "0.1.0"
description = ""
authors = ["Manuel Martin Morante <manuzombiesbf1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
numpy = "^1.24.3"

[tool.poetry.scripts]
start = "transformer.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
